--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ github_username:  hyperdragonsnews
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-architect
+theme: minima
 plugins:
   - jekyll-feed
 
