--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: news@hypedragons.com
 description: >- # this means to ignore newlines until "baseurl:"
   
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://hyperdragonsnews.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: 云斗龙HyperDragons
 github_username:  hyperdragonsnews
 feed_items: 10
